--- a/weather-outlook/Base.lproj/Main.storyboard
+++ b/weather-outlook/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,16 +24,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="eX6-pV-c8c">
-                                <rect key="frame" x="77" y="70" width="220" height="251"/>
+                                <rect key="frame" x="16" y="70" width="343" height="245"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Outlook" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9S5-L7-6hn">
-                                        <rect key="frame" x="45.5" y="0.0" width="129" height="20.5"/>
+                                        <rect key="frame" x="107" y="0.0" width="129" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="skA-pF-q7M">
-                                        <rect key="frame" x="0.0" y="70.5" width="220" height="30"/>
+                                        <rect key="frame" x="61.5" y="70.5" width="220" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="skA-pF-q7M" secondAttribute="height" multiplier="22:3" id="QwY-jS-P3k"/>
                                         </constraints>
@@ -41,15 +42,15 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wZn-YM-c6N">
-                                        <rect key="frame" x="66.5" y="150.5" width="87" height="30"/>
+                                        <rect key="frame" x="128" y="150.5" width="87" height="30"/>
                                         <state key="normal" title="Get Weather"/>
                                         <connections>
                                             <action selector="getWeatherTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zBC-d3-kpW"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weather description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="Wne-Ye-G8I">
-                                        <rect key="frame" x="34" y="230.5" width="152" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weather description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="Wne-Ye-G8I">
+                                        <rect key="frame" x="115.5" y="230.5" width="112.5" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -59,7 +60,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="eX6-pV-c8c" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BOR-9K-V0A"/>
+                            <constraint firstItem="eX6-pV-c8c" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="J3S-2j-Peb"/>
                             <constraint firstItem="eX6-pV-c8c" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="MlV-jU-ZE9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eX6-pV-c8c" secondAttribute="trailing" id="PDM-QE-bnt"/>
                         </constraints>
                     </view>
                     <connections>
